@startuml

title __KAFFEEMASCHINE's Class Diagram__\n

  namespace kaffeemaschine {
    class kaffeemaschine.AbfallBehaelter {
        + AbfallBehaelter()
        + AbfallBehaelter()
        + toString()
        + wartung()
    }
  }
  

  namespace kaffeemaschine {
    abstract class kaffeemaschine.AbstractBehaelter {
        + bezeichner : String
        ~ fuellstand : double
        ~ maxFuellMenge : double
        + AbstractBehaelter()
        + AbstractBehaelter()
        {abstract} + toString()
    }
  }
  

  namespace kaffeemaschine {
    interface kaffeemaschine.IAuswahl {
        {abstract} + programmAuswahl()
    }
  }
  

  namespace kaffeemaschine {
    interface kaffeemaschine.IWartbar {
        {abstract} + wartung()
    }
  }
  

  namespace kaffeemaschine {
    class kaffeemaschine.Kaffeemaschine {
        ~ PROGRAMM_ABBRUCH : int
        ~ WARTUNG : int
        ~ behaelterListe : AbstractBehaelter[]
        {static} ~ betriebsbereit : boolean
        + Kaffeemaschine()
        + getraenkZuebereiten()
        + programmAbbruch()
        + wartungInitiieren()
        + zutatenEntnahme()
        - getraenkAusgeben()
        - pruefeFuellstand()
        - wartenAufWartung()
    }
  }
  

  namespace kaffeemaschine {
    class kaffeemaschine.Menu {
        ~ sc : Scanner
        ~ zeile1 : String
        ~ zeile10 : String
        ~ zeile2 : String
        ~ zeile3 : String
        ~ zeile4 : String
        ~ zeile5 : String
        ~ zeile6 : String
        ~ zeile7 : String
        ~ zeile8 : String
        ~ zeile9 : String
        + Menu()
        + programmAuswahl()
    }
  }
  

  namespace kaffeemaschine {
    class kaffeemaschine.Rezept {
        {static} + AuswahlProdukt : String[]
        {static} + getZutatenVerbrauch : double[][]
    }
  }
  

  namespace kaffeemaschine {
    class kaffeemaschine.StarteKaffeeMaschine {
        {static} + main()
    }
  }
  

  namespace kaffeemaschine {
    class kaffeemaschine.ZutatenBehaelter {
        + ZutatenBehaelter()
        + toString()
        + wartung()
    }
  }
  

  kaffeemaschine.AbfallBehaelter .up.|> kaffeemaschine.IWartbar
  kaffeemaschine.AbfallBehaelter -up-|> kaffeemaschine.AbstractBehaelter
  kaffeemaschine.AbstractBehaelter .up.|> kaffeemaschine.IWartbar
  kaffeemaschine.Menu .up.|> kaffeemaschine.IAuswahl
  kaffeemaschine.ZutatenBehaelter .up.|> kaffeemaschine.IWartbar
  kaffeemaschine.ZutatenBehaelter -up-|> kaffeemaschine.AbstractBehaelter


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
